--- a/css/main.css
+++ b/css/main.css
@@ -1,100 +1,135 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.container{
-    width: 100%;
-    height: 100vh;
-background:azure;
-}
-.title1{
-    font-size: 20px;
-    text-transform: capitalize;
-    color: rgba(0,0,0,0.8);
-}
-.todo-container{
-    border:  1px solid lightcyan;
-    width: 30%;
-    margin: 20px 30%;
-    padding: 20px 40px;
-    background-color: skyblue;
-    border-radius: 8px;
-
-
-}
-form{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f1f1f2;
-    border-radius: 30px;
-}
-form>input{
-    padding: 10px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    flex: 1;
-}
-form>button{
-    border: none;
-    outline: none;
-    padding: 10px 20px;
-    background-color: black;
+  }
+  body {
+    background: dodgerblue;
     color: white;
-    border-radius: 30px;
-}
-.list-container{
-    width: 30%;
-    margin: 20px 30%;
-    padding: 20px 40px;
-    background-color: #f1f1f2;
-    border-radius: 8px;
-    border: 1px solid lightgray;
-}
-.list-container h1{
-    font-size: 20px;
-    text-transform: capitalize;
-}
-.text-center{
-    text-align: center;
-}
-ul {
-    list-style-type: none;
-}
-ul li{
-    text-transform: capitalize;
+    font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+  }
+  header {
+    font-size: 1rem;
+  }
+  
+  header,
+  form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  form input,
+  form button {
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: none;
+    background: white;
+  }
+  form button {
+    color: black;
+    background: #f7fffe;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  form button:hover {
+    background:black;
+    color: white;
+  }
+  .todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .todo-list {
+    width: 20%;
+    list-style: none;
+  }
+  
+  .todo {
+    margin: 0.5rem;
+    background: white;
     font-size: 16px;
-    user-select: none;
-    padding: 12px 8px 15px 50px;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+  }
+  .filter-todo {
+    padding: 0.5rem;
+  }
+  .todo li {
+    flex: 1;
+  }
+  
+  .trash-btn,
+  .complete-btn {
+    background: crimson;
+    color: white;
+    border: none;
+    padding: 0.7rem;
+    cursor: pointer;
+    font-size: 0.7rem;
+  }
+  .complete-btn {
+    background: black;
+  }
+  .todo-item {
+    padding: 0rem 0.5rem;
+  }
+  
+  .fa-trash,
+  .fa-check {
+    pointer-events: none;
+  }
+  
+  .fall {
+    /* transform: translateY(10rem) rotateZ(20deg); */
+    opacity: 0;
+  }
+  
+  .completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+  }
+  
+  /*CUSTOM SELECTOR */
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    outline: 0;
+    box-shadow: none;
+    border: 0 !important;
+    background-image: none;
+  }
+  
+  /* Custom Select */
+  .select {
+    margin: 10px;
     position: relative;
-    margin-left: 20px;
-
-}
-ul li::before{
-    content: '';
+    overflow: hidden;
+  }
+  select {
+    color: black;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    width: 12rem;
+  }
+  /* Arrow */
+  .select::after {
+    content: "\25BC";
     position: absolute;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    background-image: url('../images/circle2.png');
-    background-size: cover;
-    background-position: center;
-    left: 2px;
-    right: 20px;
-    
-}
-ul li.checked{
- color: #555;
- text-decoration: line-through;
-}
-ul li.checked::before{
-    background-image: url('../images/circle3.png');  
-}
-ul li span{
-    position: absolute;
-    right: 2px;
-    font-size: 30px;
-top: 0;
-}
+    top: 0;
+    right: 0;
+    padding: 5px;
+    background: black;
+    cursor: pointer;
+    pointer-events: none;
+    font-size: 16px;
+  }
+ 
